css + ajout user fait

--- a/src/InstantSoin/UserBundle/Resources/views/Admin/admin.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Admin/admin.html.twig
@@ -1,9 +1,10 @@
-{% extends '::base_admin.html.twig' %}
+{% extends 'UserBundle::layout_admin.html.twig' %}
 
 {% block title %}
     Accueil Administrateur
 {% endblock %}
 
 {% block body %}
-<h1>Vous êtes sur l'interface de d'administration</h1>
+<h1>Interface de d'administration :</h1>
+<h1>Content to be defined.</h1>
 {% endblock %}
