--- a/src/InstantSoin/UserBundle/Resources/views/layout_estheticienne.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/layout_estheticienne.html.twig
@@ -6,5 +6,5 @@
 {% endblock %}
 
 {% block sidebar %}
-    {% render url('Estheticienne_sidebar') %}
+    {% render url('sidebar_estheticienne') %}
 {% endblock %}
