--- a/app/Resources/views/base_admin.html.twig
+++ b/app/Resources/views/base_admin.html.twig
@@ -24,58 +24,40 @@
                             <ul class="menu">
 
                                 <li>
-                                    <a href="{{ path( 'services_overall' ) }}">Prestations</a>
+                                    <a href="{{ path( 'services_overall' ) }}">TDB</a>
                                     <ul>
                                             <li><a href="services_face">Les soins visage</a></li>
                                             <li><a href="services_body">Les soins du corps</a></li>
-                                            <li><a href="services_soin">Soin des ongles</a></li>
-                                            <li><a href="services_forfaits">Les forfaits soin</a></li>
-                                            <li><a href="services_massages">Massages</a></li>
-                                            <li><a href="services_peeling">Epilations</a></li>
                                     </ul>
                                 </li>
 
                                 <li>
-                                    <a href="{{ path( 'product_overall' ) }}">La boutique</a>
+                                    <a href="{{ path( 'product_overall' ) }}">TBD</a>
                                     <ul>
                                             <li><a href="{{ path( 'product_cremes' ) }}">Crèmes de jour / crèmes de nuit</a></li>
                                             <li><a href="{{ path( 'product_gommages' ) }}">Gommages et masques</a></li>
-                                            <li><a href="{{ path( 'product_maquillage' ) }}">Maquillage</a></li>
-                                            <li><a href="{{ path( 'product_lotions' ) }}">Démaquillants et lotions</a></li>
-                                            <li><a href="{{ path( 'product_parfumerie' ) }}">Parfumerie</a></li>
-                                            <li><a href="{{ path( 'equipment_overall' ) }}">Matériels</a></li>
                                     </ul>
                                 </li>
 
                                 <li>
-                                {{ form_start(search) }}
-                                    {{ form_widget(search.recherche, {'attr': {'class': 'searchInput'}}) }}
-                                    {{ form_widget(search.save) }}
-                                {{ form_end(search) }}
+                                    <a href="{{ path( 'product_overall' ) }}">TBD</a>
+                                    <ul>
+                                            <li><a href="{{ path( 'product_cremes' ) }}">Crèmes de jour / crèmes de nuit</a></li>
+                                            <li><a href="{{ path( 'product_gommages' ) }}">Gommages et masques</a></li>
+                                    </ul>
                                 </li>
+
                             </ul>
                             <div class="connexion">
                                     {% if app.user %} 
-                                        <a href="{{ path( 'logout' ) }}">Me déconnecter</a>
+                                    <a href="{{ path( 'logout' ) }}">Deconnexion</a>
                                     {% else  %}
-                                        <a href="{{ path( 'login' ) }}">Me connecter</a>
+                                    <a href="{{ path( 'login' ) }}">Connexion</a>
                                     {% endif %}
                                     <hr>
-                                    {% if is_granted('ROLE_ADMIN') %}
-                                        <a href="{{ path( 'admin' ) }}">Administration</a>
+                                    <a href="{{ path( 'product_homepage' ) }}">Accueil</a>
                                     <hr>
-                                    {% endif %}
-                                    {% if is_granted('ROLE_ESTHETICIENNE') %}
-                                        <a href="{{ path('bibliotheque_bibliothecaire') }}">Administration</a>
-                                    <hr>
-                                    {% endif %}
-                                    {% if is_granted('ROLE_USER') %}
-                                        <a href="{{ path( 'bibliotheque_profil' ) }}">Profil</a>
-                                    <hr>
-                                    {% endif %}
-                                    {% if is_granted('ROLE_USER') or is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
-                                        <a href="#">Mon panier</a>
-                                    {% endif %}
+                                    <a href="{{ path( 'user_profil' ) }}">Profil</a>
                             </div>
                         </nav>
                         <hr>
@@ -100,7 +82,9 @@
         </section>
 
             {% block javascripts %}
-
+            <script type="text/javascript"></script>
+            <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+            <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
             <script>
             $(function() {
             $( "#accordion" ).accordion();
