--- a/app/Resources/views/base_estheticienne.html.twig
+++ b/app/Resources/views/base_estheticienne.html.twig
@@ -50,26 +50,14 @@
                             </ul>
                             <div class="connexion">
                                     {% if app.user %} 
-                                        <a href="{{ path( 'logout' ) }}">Me déconnecter</a>
+                                    <a href="{{ path( 'logout' ) }}">Deconnexion</a>
                                     {% else  %}
-                                        <a href="{{ path( 'login' ) }}">Me connecter</a>
+                                    <a href="{{ path( 'login' ) }}">Connexion</a>
                                     {% endif %}
                                     <hr>
-                                    {% if is_granted('ROLE_ADMIN') %}
-                                        <a href="{{ path( 'admin' ) }}">Administration</a>
+                                    <a href="{{ path( 'product_homepage' ) }}">Accueil</a>
                                     <hr>
-                                    {% endif %}
-                                    {% if is_granted('ROLE_ESTHETICIENNE') %}
-                                        <a href="{{ path('estheticienne') }}">Administration</a>
-                                    <hr>
-                                    {% endif %}
-                                    {% if is_granted('ROLE_USER') %}
-                                        <a href="{{ path( 'user_profil' ) }}">Profil</a>
-                                    <hr>
-                                    {% endif %}
-                                    {% if is_granted('ROLE_USER') or is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
-                                        <a href="#">Mon panier</a>
-                                    {% endif %}
+                                    <a href="{{ path( 'user_profil' ) }}">Profil</a>
                             </div>
                         </nav>
                         <hr>
@@ -81,7 +69,7 @@
                 {% block body %}{% endblock %}
         </section>
         <aside class="sidebar">
-                {% block sidebar_estheticienne %}{% endblock %}
+                {% block sidebar %}{% endblock %}
         </aside>
 
         <section>
@@ -94,7 +82,9 @@
         </section>
 
             {% block javascripts %}
-
+            <script type="text/javascript"></script>
+            <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+            <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
             <script>
             $(function() {
             $( "#accordion" ).accordion();
