--- a/src/InstantSoin/UserBundle/Resources/views/Estheticienne/estheticienne.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Estheticienne/estheticienne.html.twig
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block body %}
-<h1>Vous êtes sur l'interface de L'estheticienne</h1>
+<h1>Interface de L'estheticienne</h1>
+<h1>Content to be defined</h1>
 {% endblock %}
