--- a/src/InstantSoin/UserBundle/Resources/views/Estheticienne/sidebar_estheticienne.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Estheticienne/sidebar_estheticienne.html.twig
@@ -1,33 +1,48 @@
 <section>
-    <h3>Informations utiles</h3>
+    <h3>Administration du site</h3>
 
     <div id="accordion">
+
+		<h4>Gestion des utilisateurs</h4>
+    		<div>
+    			<a href="#" class="btn btn-success actionButton">Créer un client</a><br>
+				<a href="#" class="btn btn-primary actionButton">Modifier un client</a><br>
+				<a href="#" class="btn btn-danger actionButton">Supprimer un client</a><br><br>
+				<a href="#" class="btn btn-info actionButton">Lister les clients</a>
+			</div>
+
 	    <h4>Gestion des produits</h4>
     		<div>
-			dflfklfkdlfkd	
+				<a href="#" class="btn btn-success actionButton">Créer un produit</a><br>
+				<a href="#" class="btn btn-primary actionButton">Modifier un produit</a><br>
+				<a href="#" class="btn btn-danger actionButton">Supprimer un produit</a><br><br>
+				<a href="#" class="btn btn-info actionButton">Lister les produits</a>
 			</div>
 	
 		<h4>Gestion des prestations</h4>
 			<div>
-				ffffffdffdf
+				<a href="#" class="btn btn-success actionButton">Créer une prestation</a><br>
+				<a href="#" class="btn btn-primary actionButton">Modifier une prestation</a><br>
+				<a href="#" class="btn btn-danger actionButton">Supprimer une prestation</a><br><br>
+				<a href="#" class="btn btn-info actionButton">Lister les prestations</a>
 			</div>
 			
 
 		<h4>Gestion des fournisseurs</h4>
 			<div>
-				fffdfdfdfdf
+				<a href="#" class="btn btn-success actionButton">Créer un fournisseur</a><br>
+				<a href="#" class="btn btn-primary actionButton">Modifier un fournisseur</a><br>
+				<a href="#" class="btn btn-danger actionButton">Supprimer un fournisseur</a><br><br>
+				<a href="#" class="btn btn-info actionButton">Lister les fournisseurs</a>
 			</div>
 
 		<h4>Gestion des catégories</h4>
 			<div>
-				fdfdffdfdff
+				<a href="#" class="btn btn-success actionButton">Créer une catégorie</a><br>
+				<a href="#" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
+				<a href="#" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
+				<a href="#" class="btn btn-info actionButton">Lister les catégories</a>
 			</div>
-	</div>
-
-	<hr>
-	
-	<div>
-		
 	</div>
 
 </section>
