--- a/src/InstantSoin/UserBundle/Resources/views/Security/profil_info.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Security/profil_info.html.twig
@@ -7,6 +7,15 @@
 </ul>
 <h4>Edition de votre profil</h4>
 
+{% for flashMessage in app.session.flashbag.get('user_modif_success') %}
+        <div class="add_success">
+        <p>
+        {{ flashMessage }}
+        </p>
+        <br>
+        </div>
+{% endfor %}
+
 {{ form_start(form) }}
 		<fieldset>
 			{{ form_label(form.nom, 'Nom :', {'label_attr': {'class': 'label spacerUser'}}) }}
