modif soumission et validation formulaire inscription et chgt mots de passe

--- a/src/InstantSoin/UserBundle/Resources/views/Security/contact.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Security/contact.html.twig
@@ -9,7 +9,7 @@
         </div>
     {% endfor %}
 
-    <form action="{{ path('Demande_contact') }}" method="post" {{ form_enctype(form) }} class=>
+    <form action="{{ path('Demande_contact') }}" method="post" {{ form_enctype(form) }}>
         <fieldset class="contact spacer">
         {{ form_errors(form) }}
 
