--- a/src/InstantSoin/UserBundle/Resources/views/Security/profil_info.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Security/profil_info.html.twig
@@ -19,31 +19,35 @@
 {{ form_start(form) }}
 		<fieldset>
 			{{ form_label(form.nom, 'Nom :', {'label_attr': {'class': 'label spacerUser'}}) }}
-			{{ form_widget(form.nom) }}
+			{{ form_widget(form.nom, {'attr': {'id': 'nom'}}) }}
+			{{ form_errors(form.nom) }}
 			<br>
 			{{ form_label(form.prenom, 'Prenom :', {'label_attr': {'class': 'label spacerUser'}}) }}
 			{{ form_widget(form.prenom) }}
+			{{ form_errors(form.prenom) }}
 			<br>
 			{{ form_label(form.adresse1, 'Adresse 1 :',{'label_attr': {'class': 'label spacerUser'}}) }}
 			{{ form_widget(form.adresse1) }}
+			{{ form_errors(form.adresse1) }}
 			<br>
 			{{ form_label(form.adresse2, 'Adresse 2 :', {'label_attr': {'class': 'label spacerUser'}}) }}
 			{{ form_widget(form.adresse2) }}
 			<br>
 			{{ form_label(form.codepostal, 'Code postal :', {'label_attr': {'class': 'label spacerUser'}}) }}
 			{{ form_widget(form.codepostal) }}
+			{{ form_errors(form.codepostal) }}
 			<br>
 			{{ form_label(form.ville, 'Ville :', {'label_attr': {'class': 'label spacerUser'}}) }}
 			{{ form_widget(form.ville) }}
+			{{ form_errors(form.ville) }}
 			<br>
 			{{ form_label(form.email, 'Email :', {'label_attr': {'class': 'label spacerUser'}}) }}
 			{{ form_widget(form.email) }}
+			{{ form_errors(form.email) }}
 			<br>
 			{{ form_label(form.telephone, 'Telephone :', {'label_attr': {'class': 'label spacerUser'}}) }}
 			{{ form_widget(form.telephone) }}
-			<br>
-			{{ form_label(form.username, "Nom d'utilisateur :", {'label_attr': {'class': 'label spacerUser'}}) }}
-			{{ form_widget(form.username) }}
+			{{ form_errors(form.telephone) }}
 			<br>
 			<br>
 			{{ form_widget(form.password) }}
