divers css sur forms pour compatibilite, creation fournisseurs ok avec routings sidebar admin et esthet

--- a/src/InstantSoin/UserBundle/Resources/views/Admin/sidebar_admin.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Admin/sidebar_admin.html.twig
@@ -5,43 +5,43 @@
 
 		<h4>Gestion des utilisateurs</h4>
     		<div>
-    			<a href="#" class="btn btn-success actionButton">Créer un client</a><br>
-				<a href="#" class="btn btn-primary actionButton">Modifier un client</a><br>
+    			<a href="new_account" class="btn btn-success actionButton">Créer un client</a><br>
+				<a href="user_profil" class="btn btn-primary actionButton">Modifier un client</a><br>
 				<a href="#" class="btn btn-danger actionButton">Supprimer un client</a><br><br>
 				<a href="#" class="btn btn-info actionButton">Lister les clients</a>
 			</div>
 
 	    <h4>Gestion des produits</h4>
     		<div>
-				<a href="#" class="btn btn-success actionButton">Créer un produit</a><br>
-				<a href="#" class="btn btn-primary actionButton">Modifier un produit</a><br>
-				<a href="#" class="btn btn-danger actionButton">Supprimer un produit</a><br><br>
-				<a href="#" class="btn btn-info actionButton">Lister les produits</a>
+				<a href="createProducts" class="btn btn-success actionButton">Créer un produit</a><br>
+				<a href="updateProducts" class="btn btn-primary actionButton">Modifier un produit</a><br>
+				<a href="deleteProducts" class="btn btn-danger actionButton">Supprimer un produit</a><br><br>
+				<a href="listingProducts" class="btn btn-info actionButton">Lister les produits</a>
 			</div>
 	
 		<h4>Gestion des prestations</h4>
 			<div>
-				<a href="#" class="btn btn-success actionButton">Créer une prestation</a><br>
-				<a href="#" class="btn btn-primary actionButton">Modifier une prestation</a><br>
-				<a href="#" class="btn btn-danger actionButton">Supprimer une prestation</a><br><br>
-				<a href="#" class="btn btn-info actionButton">Lister les prestations</a>
+				<a href="createServices" class="btn btn-success actionButton">Créer une prestation</a><br>
+				<a href="updateServices" class="btn btn-primary actionButton">Modifier une prestation</a><br>
+				<a href="deleteServices" class="btn btn-danger actionButton">Supprimer une prestation</a><br><br>
+				<a href="listingServices" class="btn btn-info actionButton">Lister les prestations</a>
 			</div>
 			
 
 		<h4>Gestion des fournisseurs</h4>
 			<div>
-				<a href="#" class="btn btn-success actionButton">Créer un fournisseur</a><br>
-				<a href="#" class="btn btn-primary actionButton">Modifier un fournisseur</a><br>
-				<a href="#" class="btn btn-danger actionButton">Supprimer un fournisseur</a><br><br>
-				<a href="#" class="btn btn-info actionButton">Lister les fournisseurs</a>
+				<a href="createSupplier" class="btn btn-success actionButton">Créer un fournisseur</a><br>
+				<a href="updateSupplier" class="btn btn-primary actionButton">Modifier un fournisseur</a><br>
+				<a href="deleteSupplier" class="btn btn-danger actionButton">Supprimer un fournisseur</a><br><br>
+				<a href="listingSupplier" class="btn btn-info actionButton">Lister les fournisseurs</a>
 			</div>
 
 		<h4>Gestion des catégories</h4>
 			<div>
-				<a href="#" class="btn btn-success actionButton">Créer une catégorie</a><br>
-				<a href="#" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
-				<a href="#" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
-				<a href="#" class="btn btn-info actionButton">Lister les catégories</a>
+				<a href="createCategory" class="btn btn-success actionButton">Créer une catégorie</a><br>
+				<a href="updateCategory" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
+				<a href="deleteCategory" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
+				<a href="listingCategory" class="btn btn-info actionButton">Lister les catégories</a>
 			</div>
 	</div>
 
