--- a/src/InstantSoin/ProductBundle/Resources/views/Suppliers/updateSuplier.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Suppliers/updateSuplier.html.twig
@@ -1,7 +1,7 @@
 {% extends 'UserBundle:Admin:admin.html.twig' %}
 {% block body %}
 
-    <h3>Ajouter une nouvelle catégorie</h3>
+    <h3>Modifier un fournisseur</h3>
     {% for flashMessage in app.session.flashbag.get('user_add_success') %}
         <div class="add_success">
         <p>
@@ -9,14 +9,15 @@
         </p>
         <br>
         </div>
-	{% endfor %}
-	<br><br>
+    {% endfor %}
+    <br><br>
 
     {{ form_start(form) }}
-	    <fieldset class="createSupplier">
-			<br>
-			{{ form_rest(form) }}
-		</fieldset>
-	{{ form_end(form) }}
-	
+        <fieldset class="createSupplier">
+            <br>
+            <img src="{{ asset(image) }}" class="miniImg">
+            {{ form_rest(form) }}
+        </fieldset>
+    {{ form_end(form) }}
+    
 {% endblock %}
