--- a/src/InstantSoin/UserBundle/Resources/views/Estheticienne/sidebar_estheticienne.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Estheticienne/sidebar_estheticienne.html.twig
@@ -14,16 +14,16 @@
 	    <h4>Gestion des produits</h4>
     		<div>
 				<a href="createProducts" class="btn btn-success actionButton">Créer un produit</a><br>
-				<a href="updateProducts" class="btn btn-primary actionButton">Modifier un produit</a><br>
-				<a href="deleteProducts" class="btn btn-danger actionButton">Supprimer un produit</a><br><br>
+				<a href="listingProducts" class="btn btn-primary actionButton">Modifier un produit</a><br>
+				<a href="listingProducts" class="btn btn-danger actionButton">Supprimer un produit</a><br><br>
 				<a href="listingProducts" class="btn btn-info actionButton">Lister les produits</a>
 			</div>
 	
 		<h4>Gestion des prestations</h4>
 			<div>
 				<a href="createServices" class="btn btn-success actionButton">Créer une prestation</a><br>
-				<a href="updateServices" class="btn btn-primary actionButton">Modifier une prestation</a><br>
-				<a href="deleteServices" class="btn btn-danger actionButton">Supprimer une prestation</a><br><br>
+				<a href="listingServices" class="btn btn-primary actionButton">Modifier une prestation</a><br>
+				<a href="listingServices" class="btn btn-danger actionButton">Supprimer une prestation</a><br><br>
 				<a href="listingServices" class="btn btn-info actionButton">Lister les prestations</a>
 			</div>
 			
@@ -31,16 +31,16 @@
 		<h4>Gestion des fournisseurs</h4>
 			<div>
 				<a href="createSupplier" class="btn btn-success actionButton">Créer un fournisseur</a><br>
-				<a href="updateSupplier" class="btn btn-primary actionButton">Modifier un fournisseur</a><br>
-				<a href="deleteSupplier" class="btn btn-danger actionButton">Supprimer un fournisseur</a><br><br>
+				<a href="listingSupplier" class="btn btn-primary actionButton">Modifier un fournisseur</a><br>
+				<a href="listingSupplier" class="btn btn-danger actionButton">Supprimer un fournisseur</a><br><br>
 				<a href="listingSupplier" class="btn btn-info actionButton">Lister les fournisseurs</a>
 			</div>
 
 		<h4>Gestion des catégories</h4>
 			<div>
 				<a href="createCategory" class="btn btn-success actionButton">Créer une catégorie</a><br>
-				<a href="updateCategory" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
-				<a href="deleteCategory" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
+				<a href="listingCategory" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
+				<a href="listingCategory" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
 				<a href="listingCategory" class="btn btn-info actionButton">Lister les catégories</a>
 			</div>
 	</div>
