tous les controleurs ajout et twig associes OK

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{{asset('bundles/InstantSoin/css/bootstrap.css')}}">
         <link rel="stylesheet" href="{{asset('bundles/InstantSoin/css/style.css')}}">
         {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('bundles/InstantSoin/Images/bigpads.png') }}" />
     </head>
     <body>
         <section class="header">
