--- a/src/InstantSoin/ProductBundle/Resources/views/Category/listingCategory.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Category/listingCategory.html.twig
@@ -1,30 +1,36 @@
 {% extends 'UserBundle:Admin:admin.html.twig' %}
 {% block body %}
 
-    <h3>Gestion des catégories</h3><table class="gestion-table" >
-        <thead>
-            <th>Intitulé de la catégorie</th>
-            <th>Description</th>
-            <th>Action</th>
-        </thead>
-            {% for categ in categories %}
+    <h3>Gestion des catégories</h3>
+    <div>
+        <a href="createCategory" class="btn btn-success actionButton">Ajouter une catégorie</a>
+    </div>
+    <br><br>
+    
+        <table class="table table-hover modifTable" >
+            <thead>
                 <tr>
-                    <td>
-                        {{ categories[ loop.index0 ].intitule }}
-                    </td>
-                    <td>
-                        {{ categories[ loop.index0 ].description }}
-                    </td>
-                    <td>
-                        <div class="btn btn-primary" >
-                            <a href="{{ path( 'updateCategory', {'id' : categories[ loop.index0 ].id } ) }}">Modifier</a>
-                        </div><br><br>
-                        <div class="btn btn-danger" >
-                            <a href="{{ path( 'deleteCategory', {'id' : categories[ loop.index0 ].id } ) }}">Supprimer</a>
-                        </div>
-                    </td>
+                    <th>Intitulé de la catégorie</th>
+                    <th>Description</th>
+                    <th>Action</th>
                 </tr>
-            {% endfor %}
-    </table>
-	
+            </thead>
+            <tbody>
+                {% for categ in categories %}
+                    <tr>
+                        <td>
+                            {{ categories[ loop.index0 ].intitule }}
+                        </td>
+                        <td>
+                            {{ categories[ loop.index0 ].description }}
+                        </td>
+                        <td>
+                                <a href="{{ path( 'updateCategory', {'id' : categories[ loop.index0 ].id } ) }}" class="btn btn-primary actionButton">Modifier</a><br><br>                            
+                                <a href="{{ path( 'deleteCategory', {'id' : categories[ loop.index0 ].id } ) }}" class="btn btn-danger actionButton">Supprimer</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
 {% endblock %}
