--- a/src/InstantSoin/ProductBundle/Resources/views/Suppliers/listingSuplier.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Suppliers/listingSuplier.html.twig
@@ -2,37 +2,34 @@
 {% block body %}
 
     <h3>Gestion des fournisseurs</h3>
-    {% for flashMessage in app.session.flashbag.get('user_add_success') %}
-        <div class="add_success">
-        <p>
-        {{ flashMessage }}
-        </p>
-        <br>
-        </div>
-	{% endfor %}
-	<br><br>
-
-    <table class="gestion-table" >
-        <thead>
-            <th>Nom du fournisseur</th>
-            <th>Image associée</th>
-            <th>Action</th>
-        </thead>
-            {% for fourns in fournisseurs %}
+    <div>
+        <a href="createSupplier" class="btn btn-success actionButton">Ajouter un fournisseur</a>
+    </div>
+    <br><br>
+        <table class="table table-hover modifTable" >
+            <thead>
                 <tr>
-                    <td>
-                        {{ fournisseurs[ loop.index0 ].nom }}
-                    </td>
-                    <td>
-                        <img src="{{ asset(fournisseurs[ loop.index0 ].urlimage) }}" class="afficheImage">
-                    </td>
-                    <td>
-                        <div class="btn btn-primary" ><a href="{{ path( 'updateSupplier', {'id' : fournisseurs[ loop.index0 ].id } ) }}">Modifier</a></div>
-                        <br><br>
-                        <div class="btn btn-danger" ><a href="{{ path( 'deleteSupplier', {'id' : fournisseurs[ loop.index0 ].id } ) }}">Supprimer</a></div>
-                    </td>
-                </tr>
-            {% endfor %}
-    </table>
+                    <th>Nom du fournisseur</th>
+                    <th>Image associée</th>
+                    <th>Action</th>
+                 </tr>
+            </thead>
+            <tbody>
+                {% for fourns in fournisseurs %}
+                    <tr>
+                        <td>
+                            {{ fournisseurs[ loop.index0 ].nom }}
+                        </td>
+                        <td>
+                            <img src="{{ asset(fournisseurs[ loop.index0 ].urlimage) }}">
+                        </td>
+                        <td>
+                            <a href="{{ path( 'updateSupplier', {'id' : fournisseurs[ loop.index0 ].id } ) }}" class="btn btn-primary actionButton">Modifier</a><br><br>
+                            <a href="{{ path( 'deleteSupplier', {'id' : fournisseurs[ loop.index0 ].id } ) }}" class="btn btn-danger actionButton">Supprimer</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 	
 {% endblock %}
