modif contrôleurs pour ajour cat produit et services

--- a/src/InstantSoin/ProductBundle/Resources/views/Category/updateCategoryProd.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Category/updateCategoryProd.html.twig
@@ -15,6 +15,7 @@
     {{ form_start(form) }}
         <fieldset class="createSupplier">
             <br>
+            <img src="{{ asset(image) }}" class="miniImgProd">
             {{ form_rest(form) }}
         </fieldset>
     {{ form_end(form) }}
