--- a/src/InstantSoin/ProductBundle/Resources/views/Products/Products_cremes.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/Products_cremes.html.twig
@@ -3,52 +3,52 @@
 {% block body %}
 
     <h3><a href="{{ path( 'product_overall' ) }}">Les crèmes de jour et de nuit :<span>Retour</span></a></h3>
-
-	<div>
-	<table class="table table-hover">
-		<tr>
-			{% for cremes in cremes|slice(0, 4) %}
-				<td >
-					 <a href="#">
-					 <img src="{{ asset(cremes.urlimage) }}" alt="{{ cremes.altimage }}" class="miniProd">
-					 {{ cremes.designation }}
-					 </a>
-				</td>
-			{% endfor %}
-		</tr>
-		<tr>
-			{% for cremes in cremes|slice(4, 4) %}
-				<td>
-					<a href="#">
-					 <img src="{{ asset(cremes.urlimage) }}" alt="{{ cremes.altimage }}" class="miniProd">
-					 {{ cremes.designation }}
-					 </a> 
-				</td>
-			{% endfor %}
-		</tr>
-		<tr>
-			{% for cremes in cremes|slice(8, 4) %}
-				<td>
-					<a href="#">
-					 <img src="{{ asset(cremes.urlimage) }}" alt="{{ cremes.altimage }}" class="miniProd">
-					 {{ cremes.designation }}
-					 </a>
-				</td>
-			{% endfor %}
-		</tr>
-		<tr>
-			{% for cremes in cremes|slice(12, 4) %}
-				<td>
-					<a href="#">
-					 <img src="{{ asset(cremes.urlimage) }}" alt="{{ cremes.altimage }}" class="miniProd">
-					 {{ cremes.designation }}
-					 </a>
-				</td>
-			{% endfor %}
-		</tr>
-	</table>
-	</div>
-
+    <section>
+		<div>
+			<table class="table table-hover">
+				<tr>
+					{% for cremes in cremes|slice(0, 4) %}
+						<td >
+							 <a href="#">
+							 <img src="{{ asset(cremes.urlimage) }}" alt="{{ cremes.altimage }}" class="miniProd">
+							 {{ cremes.designation }}
+							 </a>
+						</td>
+					{% endfor %}
+				</tr>
+				<tr>
+					{% for cremes in cremes|slice(4, 4) %}
+						<td>
+							<a href="#">
+							 <img src="{{ asset(cremes.urlimage) }}" alt="{{ cremes.altimage }}" class="miniProd">
+							 {{ cremes.designation }}
+							 </a> 
+						</td>
+					{% endfor %}
+				</tr>
+				<tr>
+					{% for cremes in cremes|slice(8, 4) %}
+						<td>
+							<a href="#">
+							 <img src="{{ asset(cremes.urlimage) }}" alt="{{ cremes.altimage }}" class="miniProd">
+							 {{ cremes.designation }}
+							 </a>
+						</td>
+					{% endfor %}
+				</tr>
+				<tr>
+					{% for cremes in cremes|slice(12, 4) %}
+						<td>
+							<a href="#">
+							 <img src="{{ asset(cremes.urlimage) }}" alt="{{ cremes.altimage }}" class="miniProd">
+							 {{ cremes.designation }}
+							 </a>
+						</td>
+					{% endfor %}
+				</tr>
+			</table>
+		</div>
+	</section>
 
 
 
