--- a/src/InstantSoin/UserBundle/Resources/views/Admin/sidebar_admin.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Admin/sidebar_admin.html.twig
@@ -36,12 +36,20 @@
 				<a href="listingSupplier" class="btn btn-info actionButton">Lister les fournisseurs</a>
 			</div>
 
-		<h4>Gestion des catégories</h4>
+		<h4>Gestion des catégories de produit</h4>
 			<div>
-				<a href="createCategory" class="btn btn-success actionButton">Créer une catégorie</a><br>
-				<a href="listingCategory" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
-				<a href="listingCategory" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
-				<a href="listingCategory" class="btn btn-info actionButton">Lister les catégories</a>
+				<a href="createCategoryProd" class="btn btn-success actionButton">Créer une catégorie</a><br>
+				<a href="listingCategoryProd" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
+				<a href="listingCategoryProd" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
+				<a href="listingCategoryProd" class="btn btn-info actionButton">Lister les catégories</a>
+			</div>
+
+		<h4>Gestion des catégories des services</h4>
+			<div>
+				<a href="createCategoryServ" class="btn btn-success actionButton">Créer une catégorie</a><br>
+				<a href="listingCategoryServ" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
+				<a href="listingCategoryServ" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
+				<a href="listingCategoryServ" class="btn btn-info actionButton">Lister les catégories</a>
 			</div>
 	</div>
 
