--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,25 +26,18 @@
                                 <li>
                                     <a href="{{ path( 'services_overall' ) }}">Prestations</a>
                                     <ul>
-                                            <li><a href="services_face">Les soins visage</a></li>
-                                            <li><a href="services_body">Les soins du corps</a></li>
-                                            <li><a href="services_soin">Soin des ongles</a></li>
-                                            <li><a href="services_forfaits">Les forfaits soin</a></li>
-                                            <li><a href="services_massages">Massages</a></li>
-                                            <li><a href="services_peeling">Epilations</a></li>
-
+                                            {% for Service in categoriesServ %}
+                                            <li><a href="{{ path( 'services', {'id' : categoriesServ[ loop.index0 ].id } ) }}">{{categoriesServ[ loop.index0 ].intitule }}</a></li>
+                                            {% endfor %}
                                     </ul>
                                 </li>
 
                                 <li>
                                     <a href="{{ path( 'product_overall' ) }}">La boutique</a>
                                     <ul>
-                                            <li><a href="{{ path( 'product_cremes' ) }}">Crèmes de jour / crèmes de nuit</a></li>
-                                            <li><a href="{{ path( 'product_gommages' ) }}">Gommages et masques</a></li>
-                                            <li><a href="{{ path( 'product_maquillage' ) }}">Maquillage</a></li>
-                                            <li><a href="{{ path( 'product_lotions' ) }}">Démaquillants et lotions</a></li>
-                                            <li><a href="{{ path( 'product_parfumerie' ) }}">Parfumerie</a></li>
-                                            <li><a href="{{ path( 'equipment_overall' ) }}">Matériels</a></li>
+                                            {% for Products in categoriesProd %}
+                                            <li><a href="{{ path( 'products', {'id' : categoriesProd[ loop.index0 ].id } ) }}">{{categoriesProd[ loop.index0 ].intitule }}</a></li>
+                                            {% endfor %}
                                     </ul>
                                 </li>
 
