--- a/src/InstantSoin/ProductBundle/Resources/views/Category/listingCategoryServ.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Category/listingCategoryServ.html.twig
@@ -6,7 +6,7 @@
         <a href="createCategoryServ" class="btn btn-success actionButton">Ajouter une catégorie</a>
     </div>
     <br><br>
-    
+    <section>
         <table class="table table-hover modifTable" >
             <thead>
                 <tr>
@@ -17,7 +17,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for categ in categoriesServ %}
+                {% for categServ in categoriesServ %}
                     <tr>
                         <td>
                             {{ categoriesServ[ loop.index0 ].intitule }}
@@ -36,5 +36,5 @@
                 {% endfor %}
             </tbody>
         </table>
-
+    </section>
 {% endblock %}
