--- a/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
@@ -3,41 +3,9 @@
 {% block body %}
    <h3>Les produits cosmétiques proposés :</h3>
 	<section>
-      <div>
-         <img src="{{asset('bundles/InstantSoin/Images/Buttons/creme.jpeg')}}" class="serviceimg" alt="Image impossible à charger">
-      	<form action="{{ path( 'product_cremes' ) }}">
-         	<input type="submit" name="cremes" value="Crêmes de jour et Crêmes de nuit" alt="Cliquez pour accéder à la rubrique crèmes">
-         </form>
-         
-         <img src="{{asset('bundles/InstantSoin/Images/Buttons/maquillage.png')}}" alt="Image impossible à charger">
-         <form action="{{ path( 'product_maquillage' ) }}">
-            <input type="submit" name="maquillage" value="Maquillage">
-         </form>
-   	</div>
-
-      <div>
-         <img src="{{asset('bundles/InstantSoin/Images/Buttons/masque.jpg')}}" class="serviceimg" alt="Image impossible à charger">
-         <form action="{{ path( 'product_gommages' ) }}">
-            <input type="submit" name="gommages" value="Gommages et masques">
-         </form>
-         
-         <img src="{{asset('bundles/InstantSoin/Images/Buttons/lotion.jpg')}}" alt="Image impossible à charger">
-         <form action="{{ path( 'product_lotions' ) }}">
-         	<input type="submit" name="lotions" value="Démaquillants et lotions">
-         </form>
-   	</div>
+      {% for Products in categoriesProd %}
+         <div class="overall"><img src="{{ asset(categoriesProd[ loop.index0 ].urlimage) }}" class="serviceimg" alt="Image impossible à charger"><form action="{{ path( 'products', {'id' : categoriesProd[ loop.index0 ].id } ) }}"><input type="submit" name="{{categoriesProd[ loop.index0 ].id }} "value="{{categoriesProd[ loop.index0 ].intitule }}" alt="Cliquez pour accéder à la rubrique"></form></div>
+      {% endfor %}
       
-      <div>
-         <img src="{{asset('bundles/InstantSoin/Images/Buttons/parfumerie.jpg')}}" alt="Image impossible à charger">
-      	<form action="{{ path( 'product_parfumerie' ) }}">
-         	<input type="submit" name="parfumerie" value="Parfumerie">
-         </form>
-
-         <img src="{{asset('bundles/InstantSoin/Images/Buttons/materiel.jpg')}}" alt="Image impossible à charger">
-         <form action="{{ path( 'equipment_overall' ) }}">
-            <input type="submit" name="materiel" value="Les materiels d'esthétique">
-         </form>
-         
-	   </div>
    </section>
 {% endblock %}
