--- a/app/Resources/views/base_estheticienne.html.twig
+++ b/app/Resources/views/base_estheticienne.html.twig
@@ -90,8 +90,11 @@
             $(function() {
             $( "#accordion" ).accordion();
             });
+           
+            $(function() {
+            $( "#dialog" ).dialog();
+            });
             </script>
-            
             {% endblock %}
 
     </body>
