--- a/src/InstantSoin/ProductBundle/Resources/views/Products/listingProducts.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/listingProducts.html.twig
@@ -7,30 +7,40 @@
     </div>
     <br><br>
         <table class="table table-hover modifTable" >
-            <thead>
-                <tr>
-                    <th>Référence et désignation du produit</th>
-                    <th>Image associée</th>
-                    <th>Action</th>
-                 </tr>
-            </thead>
-            <tbody>
-                {% for prods in produits %}
+
+                <thead>
                     <tr>
-                        <td>
-                            {{ produits[ loop.index0 ].reference }}<br>
-                            {{ produits[ loop.index0 ].designation }}
-                        </td>
-                        <td>
-                            <img src="{{ asset(produits[ loop.index0 ].urlimage) }}" class="miniImgProd">
-                        </td>
-                        <td>
-                            <a href="{{ path( 'updateProducts', {'id' : produits[ loop.index0 ].id } ) }}" class="btn btn-primary actionButton">Modifier</a><br><br>
-                            <a href="{{ path( 'deleteProducts', {'id' : produits[ loop.index0 ].id } ) }}" class="btn btn-danger actionButton">Supprimer</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
+                        <th>Référence et désignation du produit</th>
+                        <th>
+                            <select name="CatSelect" onchange="submit()">
+                                    <option value="%">Toutes catégories</option>
+                                {% for prods in produits %}
+                                    <option value="{{ produits[ loop.index0 ].categorieProd.id }}">{{ produits[ loop.index0 ].categorieProd.intitule }}</option>
+                                {% endfor %}
+                            </select>
+                        </th>
+                        <th>Image associée</th>
+                        <th>Action</th>
+                     </tr>
+                </thead>
+                <tbody>
+                    {% for prods in produits %}
+                        <tr>
+                            <td>
+                                {{ produits[ loop.index0 ].reference }}<br>
+                                {{ produits[ loop.index0 ].designation }}
+                            </td>
+                            <td>{{ produits[ loop.index0 ].categorieProd.intitule }}</td>
+                            <td>
+                                <div><img src="{{ asset(produits[ loop.index0 ].urlimage) }}" class="miniImgProd"></div>
+                            </td>
+                            <td>
+                                <a href="{{ path( 'updateProducts', {'id' : produits[ loop.index0 ].id } ) }}" class="btn btn-primary actionButton">Modifier</a><br><br>
+                                <a href="{{ path( 'deleteProducts', {'id' : produits[ loop.index0 ].id } ) }}" class="btn btn-danger actionButton">Supprimer</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
         </table>
 	
 {% endblock %}
