--- a/src/InstantSoin/UserBundle/Resources/views/Admin/sidebar_admin.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Admin/sidebar_admin.html.twig
@@ -44,7 +44,7 @@
 				<a href="listingCategoryProd" class="btn btn-info actionButton">Lister les catégories</a>
 			</div>
 
-		<h4>Gestion des catégories des services</h4>
+		<h4>Gestion des catégories de prestation</h4>
 			<div>
 				<a href="createCategoryServ" class="btn btn-success actionButton">Créer une catégorie</a><br>
 				<a href="listingCategoryServ" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
