--- a/src/InstantSoin/ProductBundle/Resources/views/Services/Services_overall.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Services/Services_overall.html.twig
@@ -3,8 +3,8 @@
 {% block body %}
    <h3>Les services de soins à domicile effectués :</h3>
    <section>
-      {% for Products in categoriesServ %}
-         <div class="overall"><img src="{{ asset(categoriesServ[ loop.index0 ].urlimage) }}" class="serviceimg" alt="Image impossible à charger"><form action="{{ path( 'services', {'id' : categoriesServ[ loop.index0 ].id } ) }}"><input type="submit" name="{{categoriesServ[ loop.index0 ].id }} "value="{{categoriesServ[ loop.index0 ].intitule }}" alt="Cliquez pour accéder à la rubrique"></form></div>
+      {% for Services in categoriesServ %}
+         <div class="overall"><img src="{{ asset(categoriesServ[ loop.index0 ].urlimage) }}" class="serviceimg" alt="Image impossible à charger"><form action="{{ path( 'services_by_cat', {'id' : categoriesServ[ loop.index0 ].id } ) }}"><input type="submit" value="{{categoriesServ[ loop.index0 ].intitule }}" alt="Cliquez pour accéder à la rubrique"></form></div>
       {% endfor %}
    </section>
 {% endblock %}
