--- a/app/Resources/views/base_estheticienne.html.twig
+++ b/app/Resources/views/base_estheticienne.html.twig
@@ -27,7 +27,7 @@
                                     <a href="{{ path( 'services_overall' ) }}">Prestations</a>
                                     <ul>
                                             {% for Service in categoriesServ %}
-                                            <li><a href="{{ path( 'services', {'id' : categoriesServ[ loop.index0 ].id } ) }}">{{categoriesServ[ loop.index0 ].intitule }}</a></li>
+                                            <li><a href="{{ path( 'services_by_cat', {'id' : categoriesServ[ loop.index0 ].id } ) }}">{{categoriesServ[ loop.index0 ].intitule }}</a></li>
                                             {% endfor %}
                                     </ul>
                                 </li>
@@ -36,18 +36,20 @@
                                     <a href="{{ path( 'product_overall' ) }}">La boutique</a>
                                     <ul>
                                             {% for Products in categoriesProd %}
-                                            <li><a href="{{ path( 'products', {'id' : categoriesProd[ loop.index0 ].id } ) }}">{{categoriesProd[ loop.index0 ].intitule }}</a></li>
+                                            <li><a href="{{ path( 'products_by_cat', {'id' : categoriesProd[ loop.index0 ].id } ) }}">{{categoriesProd[ loop.index0 ].intitule }}</a></li>
                                             {% endfor %}
                                     </ul>
                                 </li>
 
                                 <li>
-                                    <a href="{{ path( 'product_overall' ) }}">Le programme fidélité</a>
+                                    <a href="{{ path( 'product_overall' ) }}">La boutique</a>
                                     <ul>
-                                            <li><a href="{{ path( 'product_cremes' ) }}">Consulter les bons à échéance</a></li>
-                                            <li><a href="{{ path( 'product_gommages' ) }}">Gérer les bons</a></li>
+                                            {% for Products in categoriesProd %}
+                                            <li><a href="{{ path( 'products_by_cat', {'id' : categoriesProd[ loop.index0 ].id } ) }}">{{categoriesProd[ loop.index0 ].intitule }}</a></li>
+                                            {% endfor %}
                                     </ul>
                                 </li>
+
                             </ul>
                             <div class="connexion">
                                     {% if app.user %} 
