--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -98,47 +98,15 @@
         </section>
 
             {% block javascripts %}
-            <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+            <--!script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"--></script>
             <script src="//code.jquery.com/jquery-1.10.2.js"></script>
             <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
             <script type="text/javascript" src="{{asset('bundles/InstantSoin/js/app.js')}}" ></script>
-            <script>
-            function initialisation(){
-                var centreCarte = new google.maps.LatLng(49.0217586,1.7138252);
-                var optionsCarte = {
-                    zoom: 9,
-                    center: centreCarte,
-                    marker: true,
-                    mapTypeId: google.maps.MapTypeId.ROADMAP,
-                    zoomControl: false,
-                    mapTypeControl: false,
-                    streetViewControl: false,
-                };
-
-                var maCarte = new google.maps.Map(document.getElementById("EmplacementDeMaCarte"), optionsCarte);
-
-                var marker = new google.maps.Marker({
-                    position: centreCarte,
-                    map: maCarte
-                });
-
-                var optionsCercle = {
-                    map: maCarte,
-                    center: maCarte.getCenter(),
-                    radius: 15000
-                };
-                var monCercle = new google.maps.Circle(optionsCercle);
-            }
-            google.maps.event.addDomListener(window, 'load', initialisation);
-            </script>
+            
             
             <script>
             $(function() {
             $( "#accordion" ).accordion();
-            });
-
-            $(function() {
-            $( "#dialog" ).dialog();
             });
             </script>
             {% endblock %}
