panier refait en partie

--- a/src/InstantSoin/ProductBundle/Resources/views/Products/Products_by_cat.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/Products_by_cat.html.twig
@@ -44,7 +44,7 @@
 					</form>
 		    {% endfor %}
 		</section>
-		<button href="{{ path( 'tobd' ) }}">sauv panier</button>
+		<button href="#">sauv panier</button>
 	{% endif %}
 	    
 {% endblock %}
