--- a/app/Resources/views/base_admin.html.twig
+++ b/app/Resources/views/base_admin.html.twig
@@ -85,38 +85,12 @@
         </section>
 
             {% block javascripts %}
+
             <script type="text/javascript"></script>
             <script src="//code.jquery.com/jquery-1.10.2.js"></script>
             <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+            <script type="text/javascript" src="{{asset('bundles/InstantSoin/js/app.js')}}" ></script>
             <script>
-                        <!-- function initialisation(){
-                var centreCarte = new google.maps.LatLng(49.0217586,1.7138252);
-                var optionsCarte = {
-                    zoom: 9,
-                    center: centreCarte,
-                    marker: true,
-                    mapTypeId: google.maps.MapTypeId.ROADMAP,
-                    zoomControl: false,
-                    mapTypeControl: false,
-                    streetViewControl: false,
-                };
-
-                var maCarte = new google.maps.Map(document.getElementById("EmplacementDeMaCarte"), optionsCarte);
-
-                var marker = new google.maps.Marker({
-                    position: centreCarte,
-                    map: maCarte
-                });
-
-                var optionsCercle = {
-                    map: maCarte,
-                    center: maCarte.getCenter(),
-                    radius: 15000
-                };
-                var monCercle = new google.maps.Circle(optionsCercle);
-            }-->
-            google.maps.event.addDomListener(window, 'load', initialisation);
-
 
             $(function() {
             $( "#accordion" ).accordion();
@@ -125,6 +99,7 @@
             $(function() {
             $( "#dialog" ).dialog();
             });
+
             </script>
             {% endblock %}
 
