--- a/src/InstantSoin/UserBundle/Resources/views/Estheticienne/sidebar_estheticienne.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Estheticienne/sidebar_estheticienne.html.twig
@@ -5,51 +5,39 @@
 
 		<h4>Gestion des utilisateurs</h4>
     		<div>
-    			<a href="new_account" class="btn btn-success actionButton">Créer un client</a><br>
-				<a href="user_profil" class="btn btn-primary actionButton">Modifier un client</a><br>
-				<a href="#" class="btn btn-danger actionButton">Supprimer un client</a><br><br>
-				<a href="#" class="btn btn-info actionButton">Lister les clients</a>
+    			<a href="{{ path('new_account_admin') }}" class="btn btn-success actionButton">Créer un client</a><br>
+				<a href="{{ path('listingCustomer') }}" class="btn btn-info actionButton">Lister les clients</a>
 			</div>
 
 	    <h4>Gestion des produits</h4>
     		<div>
-				<a href="createProducts" class="btn btn-success actionButton">Créer un produit</a><br>
-				<a href="listingProducts" class="btn btn-primary actionButton">Modifier un produit</a><br>
-				<a href="listingProducts" class="btn btn-danger actionButton">Supprimer un produit</a><br><br>
-				<a href="listingProducts" class="btn btn-info actionButton">Lister les produits</a>
+				<a href="{{ path('createProducts') }}" class="btn btn-success actionButton">Créer un produit</a><br>
+				<a href="{{ path('listingProducts') }}" class="btn btn-info actionButton">Lister les produits</a>
 			</div>
 	
 		<h4>Gestion des prestations</h4>
 			<div>
-				<a href="createServices" class="btn btn-success actionButton">Créer une prestation</a><br>
-				<a href="listingServices" class="btn btn-primary actionButton">Modifier une prestation</a><br>
-				<a href="listingServices" class="btn btn-danger actionButton">Supprimer une prestation</a><br><br>
-				<a href="listingServices" class="btn btn-info actionButton">Lister les prestations</a>
+				<a href="{{ path('createServices') }}" class="btn btn-success actionButton">Créer une prestation</a><br>
+				<a href="{{ path('listingServices') }}" class="btn btn-info actionButton">Lister les prestations</a>
 			</div>
 			
 
 		<h4>Gestion des fournisseurs</h4>
 			<div>
-				<a href="createSupplier" class="btn btn-success actionButton">Créer un fournisseur</a><br>
-				<a href="listingSupplier" class="btn btn-primary actionButton">Modifier un fournisseur</a><br>
-				<a href="listingSupplier" class="btn btn-danger actionButton">Supprimer un fournisseur</a><br><br>
-				<a href="listingSupplier" class="btn btn-info actionButton">Lister les fournisseurs</a>
+				<a href="{{ path('createSupplier') }}" class="btn btn-success actionButton">Créer un fournisseur</a><br>
+				<a href="{{ path('listingSupplier') }}" class="btn btn-info actionButton">Lister les fournisseurs</a>
 			</div>
 
 		<h4>Gestion des catégories de produit</h4>
 			<div>
-				<a href="createCategoryProd" class="btn btn-success actionButton">Créer une catégorie</a><br>
-				<a href="listingCategoryProd" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
-				<a href="listingCategoryProd" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
-				<a href="listingCategoryProd" class="btn btn-info actionButton">Lister les catégories</a>
+				<a href="{{ path('createCategoryProd') }}" class="btn btn-success actionButton">Créer une catégorie</a><br>
+				<a href="{{ path('listingCategoryProd') }}" class="btn btn-info actionButton">Lister les catégories</a>
 			</div>
 
 		<h4>Gestion des catégories de prestation</h4>
 			<div>
-				<a href="createCategoryServ" class="btn btn-success actionButton">Créer une catégorie</a><br>
-				<a href="listingCategoryServ" class="btn btn-primary actionButton">Modifier une catégorie</a><br>
-				<a href="listingCategoryServ" class="btn btn-danger actionButton">Supprimer une catégorie</a><br><br>
-				<a href="listingCategoryServ" class="btn btn-info actionButton">Lister les catégories</a>
+				<a href="{{ path('createCategoryServ') }}" class="btn btn-success actionButton">Créer une catégorie</a><br>
+				<a href="{{ path('listingCategoryServ') }}" class="btn btn-info actionButton">Lister les catégories</a>
 			</div>
 	</div>
 
